hot fix search bar too big

--- a/themes/custom/sass/_navigation.scss
+++ b/themes/custom/sass/_navigation.scss
@@ -50,7 +50,11 @@
       color: var(--input-color);
       background: var(--input-background);
       height: 100%;
-      max-width: 200px;
+      max-width: 100px;
+
+      @media screen and (min-width: $small-screen) {
+        max-width: 200px;
+      }
 
       &:focus-within {
         outline: none;
